--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "scripts": {
     "dev": "nodemon src/index.js"
   },
-  "keywords": ["youtube clone"],
+  "keywords": [
+    "youtube clone"
+  ],
   "author": "Ankit yadav",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
-  "dependencies": {
-    "nodemon": "^3.1.10"
+  "devDependencies": {
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2"
   }
 }
